fix run menu vertical shift by reserving results height

--- a/style.scss
+++ b/style.scss
@@ -285,6 +285,7 @@ window.RunMenu {
   }
 
   .run-menu-results {
+    min-height: 322px;
   }
 
   .run-menu-item {
